--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pac-Man Clone</title>
+  <title>Pac-Man Clone - Com Crédito</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -20,6 +20,14 @@
       <h3>Ranking</h3>
       <ul id="ranking-list"></ul>
     </div>
+    
+    <!-- Seção de Crédito -->
+    <div id="credit-section">
+      <p>Créditos disponíveis: <span id="credit-amount">0</span></p>
+      <input type="number" id="credit-input" placeholder="Valor do crédito" min="1">
+      <button id="add-credit-btn">Adicionar Crédito</button>
+    </div>
+    
     <button id="restart-btn" style="display: none;">Reiniciar</button>
   </div>
   
